tests/snapshots/run_wpt_conformance__onnx_reduceL1_float16_4D_tensor_options_axes_with_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l1.https.any.js",
    "reduceL1 float16 4D tensor options.axes with options.keepDimensions=true",
    "onnx",
    "PASS",
)
