tests/snapshots/run_wpt_conformance__onnx_reduceL1_float16_5D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l1.https.any.js",
    "reduceL1 float16 5D tensor default options",
    "onnx",
    "PASS",
)
